--- a/index.html
+++ b/index.html
@@ -237,5 +237,6 @@
     <footer>
         <p>&copy; 2025 Ремонт компьютеров в Киеве | Все права защищены</p>
     </footer>
+    <script src="js/sticky-form.js"></script>
 </body>
 </html>
