--- a/index.html
+++ b/index.html
@@ -21,26 +21,7 @@
     <div class="layout-wrapper">
     <div class="page">
     <div class="main-content">
-            <div id="contacts" class="container">
-                <h2>Контакты</h2>
-                <div class="contacts">
-                    <div>
-                    <p><strong>Выезд мастера на дом</strong></p>
-                    <p>Бесплатно по Киеву</p>
-                    <p>Ежедневно, с 08:30 до 21:00</p>
-                    </div>
-                    <div>
-                    <p><strong>Телефон</strong></p>
-                    <p>+38 (012) 123 12 12</p>
-                    <p>+38 (013) 333 22 12</p>
-                    <p>
-                        <a href="https://t.me/Pilipchuk_NLP" class="telegram-link">
-                          <img src="icons/telegram-icon.svg" alt="Telegram" width="20" style="vertical-align: middle; margin-right: 5px;">
-                          <strong>Наш Телеграмм</strong>
-                        </a>
-                      </p>                    </div>
-                </div>
-            </div>
+            
     <div id="prices" class="container">
          <h2>Цены и услуги</h2>
         <table class="prices-table">
@@ -226,10 +207,33 @@
             <li>Бесплатный ремонт на дому по гарантии</li>
         </ul>
     </div>
-    <div class="feedback-form">
+    <div id="contacts" class="container3">
+        <h2 class="contacts-h">Контакты</h2> 
+        <div class="contacts">
+            <div>
+            <p><strong>Выезд мастера на дом</strong></p>
+            <p>Бесплатно по Киеву</p>
+            <p>Ежедневно, с 08:30 до 21:00</p>
+            </div>
+            <div>
+            <p><strong>Телефон</strong></p>
+            <p>+38 (012) 123 12 12</p>
+            <p>+38 (013) 333 22 12</p>
+            <p>
+                <a href="https://t.me/Pilipchuk_NLP" class="telegram-link">
+                  <img src="icons/telegram-icon.svg" alt="Telegram" width="20" style="vertical-align: middle; margin-right: 5px;">
+                  <strong>Наш Телеграмм</strong>
+                </a>
+              </p>                    </div>
+              <div class="button-wrapper">
+                <a href="form-page.html" class="btn-cta">Оставить заявку</a>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="feedback-form">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf7ndt0pMG_7pe4DG3yKXE2ialkG26CapVhBB3oMzFmXdEwNg/viewform?embedded=true"frameborder="0" marginheight="0" 
         marginwidth="0">Загрузка…</iframe>
-    </div>
+    </div> -->
 </div><!-- Left -->
 </div><!-- "layout-wrapper" -->
 </div> <!-- page -->
@@ -237,6 +241,5 @@
     <footer>
         <p>&copy; 2025 Ремонт компьютеров в Киеве | Все права защищены</p>
     </footer>
-    <script src="js/sticky-form.js"></script>
 </body>
 </html>
