прилипание контактов(не доработано)

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div> <!-- таблицы -->
  
     </div>   <!-- main content -->
-    <div id="left" class="container2">
+    <div id="right-s" class="container2">
     <div id="about">
         <h2>Наши преимущества</h2>
         <ul>
@@ -226,20 +226,19 @@
                 </a>
               </p>                    </div>
               <div class="button-wrapper">
-                <a href="form-page.html" class="btn-cta">Оставить заявку</a>
+                <a href="form-page.html" class="btn-cta">Оставить заявку
+                    <span class="wave wave-extra"></span>
+                </a>
             </div>
         </div>
     </div>
-    <!-- <div class="feedback-form">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf7ndt0pMG_7pe4DG3yKXE2ialkG26CapVhBB3oMzFmXdEwNg/viewform?embedded=true"frameborder="0" marginheight="0" 
-        marginwidth="0">Загрузка…</iframe>
-    </div> -->
-</div><!-- Left -->
+</div><!-- right-s -->
 </div><!-- "layout-wrapper" -->
 </div> <!-- page -->
     
     <footer>
         <p>&copy; 2025 Ремонт компьютеров в Киеве | Все права защищены</p>
     </footer>
+<script src="js/sticky.js"></script>
 </body>
 </html>
