--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <p>Бесплатно по Киеву</p>
             <p>Ежедневно, с 08:30 до 21:00</p>
             </div>
-            <div>
+            <div class="phone">
             <p><strong>Телефон</strong></p>
             <p>+38 (012) 123 12 12</p>
             <p>+38 (013) 333 22 12</p>
