--- a/contacts.html
+++ b/contacts.html
@@ -78,15 +78,15 @@
                         
                         <form id="contactForm">
                             <div class="mb-3">
-                                <input type="text" class="form-control" placeholder="Ім'я" data-lang="uk" required>
-                                <input type="text" class="form-control" placeholder="Имя" data-lang="ru" style="display:none;" required>
+                                <input type="text" id="name" name="name" class="form-control" placeholder="Ім'я" data-lang="uk" required>
+                                <input type="text" id="name" name="name" class="form-control" placeholder="Имя" data-lang="ru" style="display:none;" required>
                             </div>
                             <div class="mb-3">
-                                <input type="tel" class="form-control" placeholder="Телефон" required>
+                                <input type="tel" id="phone" name="phone" class="form-control" placeholder="Телефон" required>
                             </div>
                             <div class="mb-3">
-                                <textarea class="form-control" rows="4" placeholder="Повідомлення" data-lang="uk" required></textarea>
-                                <textarea class="form-control" rows="4" placeholder="Сообщение" data-lang="ru" style="display:none;" required></textarea>
+                                <textarea id="msg" name="msg" class="form-control" rows="4" placeholder="Повідомлення" data-lang="uk" required></textarea>
+                                <textarea id="msg" name="msg" class="form-control" rows="4" placeholder="Сообщение" data-lang="ru" style="display:none;" required></textarea>
                             </div>
                             <button type="submit" class="btn btn-accent w-100" data-lang="uk">Надіслати</button>
                             <button type="submit" class="btn btn-accent w-100" data-lang="ru" style="display:none;">Отправить</button>
@@ -133,7 +133,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script
+        type="text/javascript"
+         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="js/form.js"></script>
+   
 </body>
 </html>
