до обновления скрипта

--- a/contacts.html
+++ b/contacts.html
@@ -79,14 +79,14 @@
                         <form id="contactForm">
                             <div class="mb-3">
                                 <input type="text" id="name" name="name" class="form-control" placeholder="Ім'я" data-lang="uk" required>
-                                <input type="text" id="name" name="name" class="form-control" placeholder="Имя" data-lang="ru" style="display:none;" required>
+                                <input type="text" id="name" name="name" class="form-control" placeholder="Имя" data-lang="ru" style="display:none;">
                             </div>
                             <div class="mb-3">
                                 <input type="tel" id="phone" name="phone" class="form-control" placeholder="Телефон" required>
                             </div>
                             <div class="mb-3">
                                 <textarea id="msg" name="msg" class="form-control" rows="4" placeholder="Повідомлення" data-lang="uk" required></textarea>
-                                <textarea id="msg" name="msg" class="form-control" rows="4" placeholder="Сообщение" data-lang="ru" style="display:none;" required></textarea>
+                                <textarea id="msg" name="msg" class="form-control" rows="4" placeholder="Сообщение" data-lang="ru" style="display:none;"></textarea>
                             </div>
                             <button type="submit" class="btn btn-accent w-100" data-lang="uk">Надіслати</button>
                             <button type="submit" class="btn btn-accent w-100" data-lang="ru" style="display:none;">Отправить</button>
