--- a/index.html
+++ b/index.html
@@ -204,17 +204,17 @@
                         <h4 class="mb-4" data-lang="uk">Залишити <span class="accent-text">заявку</span></h4>
                         <h4 class="mb-4" data-lang="ru" style="display:none;">Оставить <span class="accent-text">заявку</span></h4>
                         
-                        <form>
+                        <form id="contactForm">
                             <div class="mb-3">
-                                <input type="text" class="form-control" placeholder="Ім'я" data-lang="uk">
-                                <input type="text" class="form-control" placeholder="Имя" data-lang="ru" style="display:none;">
+                                <input type="text" id="name" name="name" class="form-control" placeholder="Ім'я" data-lang="uk" required>
+                                <input type="text" id="name" name="name" class="form-control" placeholder="Имя" data-lang="ru" style="display:none;">
                             </div>
                             <div class="mb-3">
-                                <input type="tel" class="form-control" placeholder="Телефон">
+                                <input type="tel" id="phone" name="phone" class="form-control" placeholder="Телефон" required>
                             </div>
                             <div class="mb-3">
-                                <textarea class="form-control" rows="4" placeholder="Повідомлення" data-lang="uk"></textarea>
-                                <textarea class="form-control" rows="4" placeholder="Сообщение" data-lang="ru" style="display:none;"></textarea>
+                                <textarea id="msg" name="msg" class="form-control" rows="4" placeholder="Повідомлення" data-lang="uk" required></textarea>
+                                <textarea id="msg" name="msg" class="form-control" rows="4" placeholder="Сообщение" data-lang="ru" style="display:none;"></textarea>
                             </div>
                             <button type="submit" class="btn btn-accent w-100" data-lang="uk">Надіслати</button>
                             <button type="submit" class="btn btn-accent w-100" data-lang="ru" style="display:none;">Отправить</button>
@@ -264,7 +264,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"></script>
      <script
         type="text/javascript"
-         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="js/form.js"></script>
     <script src="js/script.js"></script>
 </body>
