--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Реабілітаційний центр для наркозалежних | Допомога та лікування</title>
+    <title>Центр Джерело</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+    <!-- Иконки -->
+<link rel="icon" href="icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="icons/favicon-16x16.png" type="image/png" sizes="16x16">
+<link rel="icon" href="icons/favicon-32x32.png" type="image/png" sizes="32x32">
+<link rel="icon" href="icons/favicon-48x48.png" type="image/png" sizes="48x48">
+<link rel="apple-touch-icon" href="icons/apple-touch-icon.png" sizes="180x180">
+<link rel="manifest" href="icons/site.webmanifest">
 </head>
 <body>
     <!-- Навигация -->
