--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 <link rel="icon" href="icons/favicon-48x48.png" type="image/png" sizes="48x48">
 <link rel="apple-touch-icon" href="icons/apple-touch-icon.png" sizes="180x180">
 <link rel="manifest" href="icons/site.webmanifest">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17388511580">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17388511580');
+</script>
 </head>
 <body>
     <!-- Навигация -->
